--- a/css/main.css
+++ b/css/main.css
@@ -116,17 +116,37 @@ li {
   height: 700px;
   background-image: url(../images/home-2.svg);
   background-repeat: no-repeat;
+}
+.home__top {
   position: relative;
+  top: 200px;
+  left: 100px;
+}
+.home__left-img {
+  position: relative;
+  right: 125px;
+  top: 160px;
+}
+.home__right-img {
+  position: relative;
+  bottom: 195px;
+  left: 1140px;
 }
 .header__description {
   color: #ffffff;
   font-size: 24px;
   width: 592px;
+  margin: 30px 0;
 }
 .home__price {
   display: flex;
   align-items: center;
   color: #ffffff;
+  gap: 20px;
+  margin: 20px 0;
+}
+.home__buttons {
+  display: flex;
   gap: 20px;
 }
 /* home styles ends */
