--- a/css/main.css
+++ b/css/main.css
@@ -409,3 +409,32 @@ li {
   background-color: #4277ff;
 }
 /* discount styles ends */
+/* blog styles starts */
+.blog {
+  padding: 40px 0;
+  color: #fff;
+}
+.blog__bottom {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.blog__card {
+  margin: 30px 0;
+}
+.blog__card--title {
+  color: #fff;
+}
+.blog__card--p {
+  margin: 10px 0;
+  width: 366px;
+  font-size: 18px;
+  font-weight: 400;
+}
+.blog__card-date {
+  font-weight: 400;
+  font-size: 16px;
+  color: #63656a;
+}
+/* blog styles ends */
